[project]
name = "my-lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-core>=0.3.71",
    "langchain-openai>=0.3.28",
    "langserve>=0.3.1",
    "sse-starlette>=2.4.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "my-lang",
]
